--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <center><p>Hello Git !</p></center>
     <p><mark><a href="https://github.com">Click open Link GitHub</a></mark></p>
+    <p><mark><a href="https://github.com">Click open Link GitHub</a></mark></p>
+    <p><mark><a href="https://github.com">สามารถคลิกเพื่อเปิดหน้าเว็บ GitHub ได้ที่นี่ !!!</a></mark></p>
 </body>
 </html>
