เพิ่ม Tag P เพื่อบอกว่าลิงค์บนเข้าเว็บได้

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p><mark><a href="https://github.com">Click open Link GitHub</a></mark></p>
     <p><mark><a href="https://github.com">Click open Link GitHub</a></mark></p>
     <p><mark><a href="https://github.com">สามารถคลิกเพื่อเปิดหน้าเว็บ GitHub ได้ที่นี่ !!!</a></mark></p>
+    <p><mark><a href="https://github.com">สามาระเข้าใช้งาน GitHub ได้ที่ลิงค์ด้านบน</a></mark></p>
 </body>
 </html>
